--- a/contact.html
+++ b/contact.html
@@ -26,12 +26,16 @@
 </header>
 <main>
 <section id="hero">
+     <div class="hero__img">
     <img src="img/betta-pic.png" alt="">
-    <div class="hero__container">
-    <h2>Car <span>Wash</span> Expressso</h2>
-    <h3>we serve to our very best costumers desires</h3>
-    <a href="tel:2136842369" class="hero__anchor">213.684.2369</a>
   </div>
+    <hgroup class="hero__container">
+       <h2>Car <span>Wash</span> Expressso</h2>
+       <h3>we serve to our very best costumers desires</h3>
+    </hgroup>
+    <button class="hero__btn">
+      <a href="tel:2136842369" class="hero__anchor">213.684.2369</a>
+    </button>
 </section>
 <section class="alpha">
   <div class="alpha__top-container">
