--- a/index.html
+++ b/index.html
@@ -2,122 +2,130 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/style.css">
-  <title>Car Wash Expreso</title>
+  <title>home car washo</title>
+</head>
 <body>
-  <header id="header">
-    <nav class="navbar">
-      <picture class="logo"><img src="img/wash-auto-expresso.png" alt=""></picture>
-      <input type="checkbox" id="check">
-      <label for="check" class="checkbtn">
-        <i class="fa-solid fa-bars"></i>
-      </label>
-      <ul class="menu">
-        <li><a class="active">home</a></li>
-        <li><a href="prices.html">our prices</a></li>
-        <li><a href="book.html">book us</a></li>
-        <li><a href="contact.html">Contact us</a></li>
-        <li><a href="blogger.html">Our Blog</a></li>
-        <li><a href="tel:2136842369"><i class="fa-solid fa-phone"></i></a></li>
-      </ul>
-    </nav>
-  </header>
+<header id="header">
+  <nav class="navbar container">
+    <picture class="logo"><img src="img/logote.jpg" alt=""></picture>
+    <input type="checkbox" id="check">
+    <label for="check" class="checkbtn">
+      <span>&#9776;</span>
+     <!---- <img src="img/menu.png" height="26" viewBox="0 96 960 960" width="26" alt="menu"> -->
+    </label>
+    <ul class="menu">
+      <li><a class="active">home</a></li>
+      <li><a href="prices.html">our prices</a></li>
+      <li><a href="book.html">book us</a></li>
+      <li><a href="contact.html">Contact us</a></li>
+      <li><a href="blogger.html">Our Blog</a></li>
+      <li><a href="tel:2136842369">
+        <img src="img/telephone-two.png" height="26" viewBox="0 96 960 960" width="26" alt="menu">
+      </a></li>
+    </ul>
+  </nav>
+</header>
 <main>
   <section id="hero">
-    <div class="hero__container">
-        <h4>Wellcome to:</h4>
-        <h2><span>Wash</span><span id="span">Auto</span> Expresso</h2>
-        <hr class="hr">
+    <div class="hero container">
+        <h3>Wellcome to:</h3>
+        <h1>Wash Auto Expresso</h1>
         <q>In the confort of your house</q>
-        <button class="hero__btn"><a href="tel:2136842369" class="hero-a">CALL US</a></button>
+        <button class="btn btn-primary" id="btn-first">
+          <a href="tel:2136842369" class="btn-a" target="_self" title="call us">call us</a>
+        </button>
     </div>
   </section>
-<section class="alpha">
-  <div class="alpha__headed">
-    <hgroup class="alpha__group">
-      <h3 class="alpha__h3">1</h3>
-      <h1>Our Skills For Your Vehicle</h1>
-      <h4>Mobile Car <span>Wash</span> Expresso care on site at your location - clean, with 
+<section id="alpha">
+    <div class="alpha container">
+      <h3 class="alpha-h3">1</h3>
+      <h2>Our Skills For Your Vehicle</h2>
+      <p>Mobile Car <span>Wash</span> Expresso care on site at your location - clean, with 
         attention to detail and inexpensive. The alternative to the classic car wash! Cleaning 
         without chemicals and only about 0.4 Lt of water! You always pay after the vehicle has 
         been cared for. We accept all common cards or cash. Booking on account is also available for tradespeople and business customers. Book your desired appointment easily under the
         'Book an appointment' tab below or call us. You can find the telephone numbers under 'Contact'. We work in
-        Los Angeles and the surrounding area.</h4>
-    </hgroup>
-  </div>
+        Los Angeles and the surrounding area.</p>
+      </div>
   </section>
   <!-- ALPHA HEADED  -->
-   <section class="gamma">
-    <div class="gamma__container">
-      <div class="article__top">
-        <div class="article__img">
-          <img src="img/wash-express.webp" alt="">
-            </div>
-        <div class="article__right">
-          <h2>A clean car is not magic</h2>
-          <p>
-            We clean and maintain your vehicle gently by hand, using almost no water and environmentally friendly
-            products - a vehicle cannot be cleaned more gently and thoroughly!
-            As the cleaning requires almost no water, it is permitted everywhere, as neither the groundwater is
-            contaminated nor residues can get into the sewage system.
-            Book an appointment easily by calling <a class="right__anchor" href="tel:3237049871">323.704.9871</a>
-            (local rate) or by email at <a href="mailto:neekarostran@gmail.com">neekarostran@gmail.com</a>
-            Alternatively, please register in our appointment booking tool to be able to make appointments online even
-            more conveniently. The booking tool will automatically show you the next available appointment.
-            Please be sure to enter your address in the 'Other comments' field.
-          </p>
-          <a class="alpha_a" href="book.html">book an appointment</a>
-        </div>
+  <section id="gamma">
+    <div class="gamma container">
+      <div class="gamma__img"><img src="img/wash-express.webp" alt=""></div>
+      <div class="gamma__right">
+        <h2>a clean car is not a magic</h2>
+        <p>
+          We clean and maintain your vehicle gently by hand, using almost no water and environmentally friendly
+          products - a vehicle cannot be cleaned more gently and thoroughly!
+          As the cleaning requires almost no water, it is permitted everywhere, as neither the groundwater is
+          contaminated nor residues can get into the sewage system.
+          Book an appointment easily by calling <a class="right__anchor" href="tel:3237049871">323.704.9871</a>
+          (local rate) or by email at <a href="mailto:neekarostran@gmail.com">neekarostran@gmail.com</a>
+          Alternatively, please register in our appointment booking tool to be able to make appointments online even
+          more conveniently. The booking tool will automatically show you the next available appointment.
+          Please be sure to enter your address in the 'Other comments' field.
+        </p>
+        <button class="btn btn-primary" id="gamma-btn">
+          <a href="book.html" class="btn-a" target="_self" title="book an appointment">book an appointment</a>
+        </button>
       </div>
-      <div class="article__bottom">
-        <div class="article__left">
-          <h2>Reliable work - fast and flexible</h2>
-          <p>
-            We offer you skilled reconditioners and fast execution - so that long waiting times for the result are a
-            thing of the past.
-            And all this while you can go about your own tasks. We take care of the vehicle directly on site at your
-            place. Vehicle care can be that convenient for you!
-          </p>
-          <a class="alpha_a" href="prices.html" id="alpha_a">book an appointment</a>
+    </div>
+</section>
+  <section id="delta">
+    <div class="delta container">
+      <div class="delta__left">
+        <h2>Reliable work - fast and flexible</h2>
+        <p>
+          We offer you skilled reconditioners and fast execution - so that long waiting times for the result are a
+          thing of the past. And all this while you can go about your own tasks. We take care of the vehicle directly 
+          on site at your place. Vehicle care can be that convenient for you!
+        </p>
+          <button class="btn btn-primary" id="delta-btn">
+            <a href="prices.html" class="btn-a" target="_self" title="book an appointment">book an appointment</a>
+              </button>
         </div>
-        <div class="article__img">
-          <img src="img/Intro-Car-Show.webp" alt="">
+        <div class="delta__img">
+          <img src="img/Intro-Car-Show.webp" alt="Intro-Car-Show">
             </div>    
       </div>
-
+    </section>
+   <!-- ALPHA-CONTENTO  -->
+<div class="our__offers">
+  <button class="offers__btn"><a href="book.html">our offers</a></button>
+</div>
+  <section id="omega">
+      <div class="omega container">
+          <div class="offer left_offer">
+            <h3>Transparent cost overview</h3>
+              <p>
+                We have no hidden costs. Payment is only made after the work has been completed.
+                You can choose between paying by card or paying in cash; we offer companies and tradespeople the option
+                of booking on account.
+              </p>
+          </div>
+          <div class="offer center_offer">
+            <h3>We wash (almost) without water</h3>
+            <p>
+              Our environmentally friendly cleaning products enable us to wash a vehicle, depending on its size, with
+              0.25 - 0.4 liters of water - a real win for the environment! This
+              small amount of water only serves as a carrier substance for our biodegradable cleaning and care
+              products, as these cannot be used pure.
+            </p>
+        </div>
+        <div class="offer right_offer">
+          <h3>Also attractive for corporate customers</h3>
+          <p>
+            Business owners, corporate customers and fleet managers benefit from our corporate conditions. Please
+            just ask, we will tailor a tariff to your needs - booking on account included.
+          </p>
+      </div>
     </div>
-   </section>
-      
-<section class="alpha__contento">
-  <div class="our__offers">
-    <button class="offers__btn"><a href="book.html">our offers</a></button>
-  </div>
-  <div class="triple_offers">
-    <div class="offer left_offer">
-      <h3>Transparent cost overview</h3>
-      <p> We have no hidden costs. Payment is only made after the work has been completed.
-        You can choose between paying by card or paying in cash; we offer companies and tradespeople the option
-        of booking on account.</p>
-    </div>
-    <div class="offer center_offer">
-      <h3>We wash (almost) without water</h3>
-      <p>Our environmentally friendly cleaning products enable us to wash a vehicle, depending on its size, with
-        0.25 - 0.4 liters of water - a real win for the environment! This
-        small amount of water only serves as a carrier substance for our biodegradable cleaning and care
-        products, as these cannot be used pure.</p>
-    </div>
-    <div class="offer right_offer">
-      <h3>Also attractive for corporate customers</h3>
-      <p>Business owners, corporate customers and fleet managers benefit from our corporate conditions. Please
-        just ask, we will tailor a tariff to your needs - booking on account included.</p>
-    </div>
-  </div>
 </section>
 <!--   NO SECTION I DONOW WHY   -->
-<section class="second">
-  <div class="second__container">
+<section id="second">
+  <div class="container">
     <hgroup class="hgroup__second">
       <h3>2</h3>
       <h2>Our self-image</h2>
@@ -139,8 +147,8 @@
     </div>
   </div>
 </section>
-<section class="betta">
-  <div class="betta__container">
+<section id="betta">
+  <div class="container">
     <div class="betta_headed">
       <h3>3</h3>
       <h2>Our promise to you</h2>
@@ -158,12 +166,12 @@
         <p>With us you won't experience any nasty surprises. There are no hidden costs.</p>
       </div>
       <div class="fourplex_content">
-        <div class="fourplex_img"><img src="img/betta-viejon.jpg" alt=""></div>
+        <div class="fourplex_img"><img src="img/wash-car-picture1.jpg" alt=""></div>
         <h3>Flexible appointments</h3>
         <p>We adapt to your wishes, whether in terms of time or location in Los Angeles and the surrounding area.</p>
       </div>
       <div class="fourplex_content">
-        <div class="fourplex_img"><img src="img/betta-pic2.jpg" alt=""></div>
+        <div class="fourplex_img"><img src="img/wash-car-pig1.jpg" alt=""></div>
         <h3>Talk to us</h3>
         <p>Special assignments for weddings, film and television productions, vehicle fleets or cleaning show cars
           are no problem. Ask us.</p>
@@ -173,12 +181,14 @@
 </section>
 <!--   THE CUCUY IS MISSING -->
   <div class="to__top">
-    <a href="#header" class="to-top-a"><i class="fa-solid fa-chevron-up"></i></a>
+    <a href="#header" class="to-top-a">
+      <img src="img/up-chevron.png" alt="up-chevron">
+    </a>
       </div>
-       </main>
+</main>
  <!--  END OF MAIN           END OF MAIN           END OF MAIN      -->
-<footer>
-  <div class="footer__container">
+<footer id="footer">
+  <div class="footer container">
         <div class="footer__item">
           <h4>About Us</h4>
           <p>Mobile Wash auto Expresso has been in business since 2010. Known as one of the most trusted
@@ -186,13 +196,24 @@
              Huntington Park, and sorrounding areas. We provide the higher quality of cleaning 
              and maintaining services to residential property as well as offices owner automobiles.</p>
           <div class="footer_social-link">
-            <a href="https://www.facebook.com/profile.php?id=61565239432741&mibextid=ZbWKwL" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/Yinyleonofficial/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://x.com/elonmusk" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/company/rockstar-games" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Neeka-Lord" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/neeka_rostran/" target="_blank">
+              <img src="img/fbkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="fbkclogo">
+              </a>
+              <a href="https://www.instagram.com/Yinyleonofficial/" target="_blank">
+              <img src="img/instkcdlogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="instkcdlogo">
+              </a>
+              <a href="https://x.com/elonmusk" target="_blank">
+              <img src="img/twrtkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="twrtkclogo">
+              </a>
+              <a href="https://www.linkedin.com/company/rockstar-games" target="_blank">
+              <img src="img/tiktokkc.webp" height="36" viewBox="0 96 960 960" width="36" alt="tiktokkc">
+              </a>
+              <a href="https://github.com/Neeka-Lord" target="_blank">
+              <img src="img/ytkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="ytkclogo">
+              </a>
           </div>
         </div>
+
         <div class="footer__item footer__right">
           <h4>Contact Us</h4>
           <ul class="footer__menu">
@@ -204,12 +225,13 @@
           </ul>
           <h3>Keep in Touch</h3>
           <p>Simply subscribe to our newsletter to always be up to date.</p>
-          <button class="footer__btn"><a href="tel:2136842369" class="foot__anchor">call us</a></button>
+          <button class="btn" id="footer-btn" ><a href="tel:2136842369" class="btn-a">call us</a></button>
         </div>
-  </div>
-    <div class="ultimo__hombre">
-      <small>all rights reserved to <span>Neeka</span> Rostran &copy;2024</small>
     </div>
+
+      <div class="ultimo__hombre">
+      <small>all rights reserved to <span>Neeka</span> Rostran &copy;2024</small>
+      </div>
 </footer>
 <script>
 $(document).ready(function () {
@@ -235,7 +257,7 @@ $(document).ready(function () {
           window.location.hash = hash;
         }
       );
-    } // End if
+    } 
   });
 });
 </script>
