--- a/blogger.html
+++ b/blogger.html
@@ -7,12 +7,12 @@
   <title>Kostumers</title>
 </head>
 <body>
-<header>
-  <nav class="navbar">
+<header id="header">
+  <nav class="navbar container">
     <picture class="logo"><img src="img/logote.jpg" alt=""></picture>
     <input type="checkbox" id="check">
     <label for="check" class="checkbtn">
-      <i class="fa-solid fa-bars"></i>
+      <span>&#9776;</span>
     </label>
     <ul class="menu">
       <li><a href="index.html">home</a></li>
@@ -20,179 +20,176 @@
       <li><a href="book.html">book us</a></li>
       <li><a href="contact.html">Contact us</a></li>
       <li><a class="active">Our Blog</a></li>
-      <li><a href="tel:2136842369"><i class="fa-solid fa-phone"></i></a></li>
+      <li><a href="tel:2136842369">
+        <img src="img/telephone-two.png" height="26" viewBox="0 96 960 960" width="26"  alt="telephone-two"></a></li>
     </ul>
   </nav>
 </header>
   <main>
   <section id="hero">
-    <img src="img/Our-costumer-main-pic.jpg" alt="">
-      <div class="hero__container">
-        <button class="hero__btn">
-           <a href="tel:2136842369" class="hero__anchor">CALL NOW</a>
+      <div class="hero container">
+        <button id="hero-btn" class="btn btn-primary">
+           <a href="tel:2136842369" class="btn-a" target="_self" title="call now">call now</a>
         </button>
         <p>We Bring Everything with US!</p>
-        <h3>Polishing / Washing / Ceramic Coating / Comes in Comes out</h3>
+        <h3>Polishing | Washing | Ceramic Coating | Comes in Comes out</h3>
       </div>
   </section>
-  <section class="alpha">
-    <div class="alpha__container">
-       <div class="alpha__head">
+  <section id="alpha">
+    <div class="alpha container">
+        <div class="alpha__head">
           <h1><span>Our</span> Costumers</h1>
-       </div>
-       <div class="show__time">
-           <div class="shows">
-              <h4>Know Better About Mobile Car Washo Services in Los angeles</h4>
-              <h2>Professional Expresso Car Washing and Mobile Car Detailing in Los Amgeles</h2>
-              <p>Washo Car Expresso is the first company in Los Angeles to introduce affordable Mobile 
+        </div>
+      <div class="alpha__content">
+        <div class="showtime__left">
+              <h4>Know Better About Mobile Auto Wash Services in Los angeles</h4>
+              <h2>Professional Express Car Washing and Mobile Car Detailing in Los Angeles</h2>
+              <p>
+                Wash Auto Expresso is the first company in Los Angeles to introduce affordable Mobile 
                 Car and Mobile Car Washing near you, with over 6000 cars cleaned across Los Angeles.  
-                Inside & Out mobile car detailing from $29,  We revolutionize how mobile car wash services 
+                Inside & Out mobile car detailing from $29.99,  We revolutionize how mobile car wash services 
                 are done in Los Angeles by offering a Mini-Valet Service. Most people don't want to pay 
                 $50 - $100 for a Full-Valet so our Mini-Valets cost around $29.95 for a full exterior 
-                clean and a lighter interior clean.</p>
+                clean and a lighter interior clean.
+              </p>
                 <p><strong>Most people don't actually need a full valet so why pay more?</strong></p>
-                <p>CALL OR TEXT US: <a href="tel:2136842369" class="shows__anchor">213.684.2369</a>
-           </div>
-           <div class="shows shows__right">
-              <img src="img/shows-section.webp" alt="">
-              <a href="book.html" class="shows__anchor-right">BOOK NOW</a>
-           </div>
-       </div>
-    </div>
-  </section>
-  <section class="betta">
-    <div class="betta__container">
-      <div class="betta__menu-left">
-        <div class="betta__left">
-          <h2 class="betta-h2">
-            interior or exterior clean
-          </h2>
-          <p>
-            any size vehicle
-          </p>
+                <p>give us a call of text if it make you feel confortable: <a href="tel:2136842369" class="showtime-a">213.684.2369</a>
         </div>
-        <div class="betta__left-one">
-          <span>$</span>
-          <h2>49.00</h2>
-        </div>
-        <ul class="betta__menu">
-          <li>full pressure washer machine</li>
-          <li>window cleaned</li>
-          <li>wheels cleaned</li>
-          <li>** Extras include:Machine Polish, Trim Restorer, Wax/Ceramic Coatings, Head Light Restoration.**</li>
-        </ul>
-        <a href="book.html" class="betta-a">book on us</a>
-
+           <div class="showtime__img">
+              <img src="img/bloger-picture.jpg" alt="bloger-picture">
+           </div>
       </div>
-      <div class="betta__menu-left">
-        <div class="betta__left">
-          <h2 class="betta-h2">
-            Inside And Out
-          </h2>
-          <p>
-            We Have enough guarante
-          </p>
+      </div>
+  </section>
+  <!--   BETTA   BELLOW  -->
+  <section id="betta">
+    <div class="betta container">
+      <div class="betta_card">
+        <div class="betta_headed" id="betta-1">
+          <h2>interior or exteior clean</h2>
+          <p>any size vehicle</p>
         </div>
-        <div class="betta__left-one">
-          <span>$</span>
-          <h2>99.99</h2>
+          <div class="betta_prices">
+            <h2><span>$</span> 49.00</h2>
+          </div>
+        <div class="betta_body">
+          <ul class="betta__menu">
+            <li>full pressure washer machine</li>
+            <li>window cleaned</li>
+            <li>wheels cleaned</li>
+            <li>♫ Extras include:Machine Polish, Trim Restorer, Wax/Ceramic Coatings, Head Light Restoration. ♫</li>
+          </ul>
+          <a href="book.html" class="betta-a">book on us</a>
         </div>
-        <ul class="betta__menu">
-          <li>carpet remove and hoovered</li>
-          <li>seats hoovered</li>
-          <li>dash wipe down</li>
-          <li>windows clean</li>
-          <li>
-            extras include: boot clean, lether clean, seat and carpet clean, dash and door machine polish, trim 
-            restorer, Wax/ceramic Coating, head lights restoration
-          </li>
-        </ul>
-        <a href="book.html" class="betta-a">book on us</a>
-
+      </div>
+      <div class="betta_card">
+        <div class="betta_headed" id="betta-2">
+          <h2>inside & out</h2>
+          <p>we have enough guarante ☺</p>
+        </div>
+        <div class="betta_prices">
+          <h2><span>$</span> 99.99</h2>
+        </div>
+        <div class="betta_body">
+          <ul class="betta__menu">
+            <li>carpet removal & hoovered</li>
+            <li>seats hoovered</li>
+            <li>dash wipe down</li>
+            <li>windows clean <span>(NO software)</span></li>
+            <li>
+              ♫ extras include: boot clean, lether clean, seat and carpet clean, dash and door machine polish, trim 
+              restorer, Wax/ceramic Coating, head lights restoration ♫
+            </li>
+          </ul>
+          <a href="book.html" class="betta-a">book on us</a>
+        </div>
       </div>
     </div>
   </section>
-  <hr>
+  <!--  MODAL IMAGES SECTION  -->
 <section class="imagen-modal">
-    <h2 class="modal-h2">Take a chance and see what have done</h2>
+  <h2 class="modal-h2">Take a chance and see what have done</h2>
 	
-<ul class="gallery">
+  <ul class="gallery">
   <li><a href="#img1"><img src="img/blogger-one.jpg"></a></li>
   <li><a href="#img2"><img src="img/blogger-two.webp"></a></li>
   <li><a href="#img3"><img src="img/blogger-three.webp"></a></li>
   <li><a href="#img4"><img src="img/blogger-fourth.webp"></a></li>
-</ul>
+  </ul>
 
-<div class="modal" id="img1">
-  <h3>Paisaje 1</h3>
+  <div class="modal" id="img1">
+  <h3>landscape 1</h3>
   <div class="imagen">
     <a href="#img4">&#60;</a>
     <a href="#img2"><img src="img/blogger-one.jpg"></a>
     <a href="#img2">&#x203a;</a>
   </div>
-  <a class="cerrar" href="">X</a>
-</div>
+  <a class="cerrar" href="">&times;</a>
+  </div>
 
-<div class="modal" id="img2">
-  <h3>Paisaje 2</h3>
+  <div class="modal" id="img2">
+  <h3>landscape 2</h3>
   <div class="imagen">
     <a href="#img1">&#60;</a>
     <a href="#img3"><img src="img/blogger-two.webp"></a>
     <a href="#img3">&#x203a;</a>
   </div>
-  <a class="cerrar" href="">X</a>
-</div>
+  <a class="cerrar" href="">&times;</a>
+  </div>
 
-<div class="modal" id="img3">
-  <h3>Paisaje 3</h3>
+  <div class="modal" id="img3">
+  <h3>landscape 3</h3>
   <div class="imagen">
     <a href="#img2">&#60;</a>
     <a href="#img4"><img src="img/blogger-three.webp"></a>
     <a href="#img4">&#x203a;</a>
   </div>
-  <a class="cerrar" href="">X</a>
-</div>
+  <a class="cerrar" href="">&times;</a>
+  </div>
 
-<div class="modal" id="img4">
-  <h3>Paisaje 4</h3>
+  <div class="modal" id="img4">
+  <h3>landscape 4</h3>
   <div class="imagen">
     <a href="#img3">&#60;</a>
     <a href="#img1"><img src="img/blogger-fourth.webp"></a>
     <a href="#img1">&#x203a;</a>
   </div>
-  <a class="cerrar" href="">X</a>
-</div>
-  </section>
+  <a class="cerrar" href="">&times;</a>
+  </div>
+</section>
 
-  <section class="gamma">
-    <div class="gamma__container">
+  <section id="gamma">
+    <div class="gamma container">
       <img src="img/frozen-bubble-1943224_1280.jpeg" alt="">
         <div class="gamma__right">
           <h2>Why choose <span>Wash</span> Auto Expresso and detailing service?</h2>
             <h4>First of all, the difference between Wash Auto Expresso and any simple car wash is the attention to detail.</h4>
             <p>
               Mobile car <strong>wash</strong> Expresso and detailing takes place on the exterior where we supply a polish and ceramic coating and we 
-              focus on making your car shine.  A car valeting is a just decent mobile car clean.   Car detailers tend 
+              focus on making your car shine.  A car valeting is a just decent mobile car clean. Car detailers tend 
               to go into <i>details</i> in where you can spend over $200 getting your car detailed. Car Wash Expresso offers a mobile        
               car service at half the price of our competitors because you choose what services you need rather 
-              than overpaying for full valeting.  Think of us as a pick-and-mix service with the same selection both 
+              than overpaying for full valeting. Think of us as a pick-and-mix service with the same selection both 
               inside and out but much cheaper. mobile car Expresso come to your location, rain or shine, and 
               offer a wide range of services with top-shelf products and equipment.
             </p>
-            <button class="gamma__btn"><a href="contact.html">Request A Quote</a> </button>
+            <button class="btn btn-primary" id="gamma-btn">
+              <a href="tel:2136842369" class="btn-a" target="_self" title="request a quote">request a quote</a>
+            </button>
           </div>
         </div>
       </section>
-
-
-  </main>
-  <!--   MAIN SECTION END ---   MAIN SECTION END         -->
+  <!--  STRAIGHT UP TO THE TOP  -->
   <div class="to__top">
-    <a href="#" class="top__anchor"><i class="fa-solid fa-chevron-up"></i></a>
+    <a href="#header" class="to-top-a" target="_self">
+      <img src="img/up-chevron.png" alt="up-chevron">
+    </a>
   </div>
+</main>
+
 <!--   FOOTER     FOOOTER      FOOTER     -->
-<footer>
-  <div class="footer__container">
+<footer id="footer">
+  <div class="footer container">
     
         <div class="footer__item">
           <h4>About Us</h4>
@@ -201,11 +198,21 @@
              Huntington Park, and sorrounding areas. We provide the higher quality of cleaning 
              and maintaining services to residential property owners as well as offices.</p>
           <div class="footer_social-link">
-            <a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/Yinyleonofficial/" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://x.com/elonmusk" target="_blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/company/rockstar-games" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="https://github.com/Neeka-Lord" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="https://www.facebook.com/neeka_rostran/" target="_blank">
+            <img src="img/fbkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="fbkclogo">
+            </a>
+            <a href="https://www.instagram.com/Yinyleonofficial/" target="_blank">
+            <img src="img/instkcdlogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="instkcdlogo">
+            </a>
+            <a href="https://x.com/elonmusk" target="_blank">
+            <img src="img/twrtkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="twrtkclogo">
+            </a>
+            <a href="https://www.linkedin.com/company/rockstar-games" target="_blank">
+            <img src="img/tiktokkc.webp" height="36" viewBox="0 96 960 960" width="36" alt="tiktokkc">
+            </a>
+            <a href="https://github.com/Neeka-Lord" target="_blank">
+            <img src="img/ytkclogo.webp" height="36" viewBox="0 96 960 960" width="36" alt="ytkclogo">
+            </a>
           </div>
         </div>
         <div class="footer__item footer__right">
